test ryun failure but added the roboelectric test